<resources>
    <string name="app_name">FlashCardsManager</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="p_add">Add project</string>
    <string name="p_edit">Edit project</string>
    <string name="p_delete">Delete project</string>
    <string name="p_add_success">Project added successfully!</string>
    <string name="p_edit_success">Project edited successfully!</string>
    <string name="p_import_choose">Choose project folders to import:</string>

    <string name="c_add">Add card</string>
    <string name="c_edit">Edit card</string>
    <string name="c_delete">Delete card</string>
    <string name="c_question">Question</string>
    <string name="c_question_hint">Enter question text</string>
    <string name="c_answer">Answer</string>
    <string name="c_answer_hint">Enter answer text</string>
    <string name="c_add_success">Card added successfully!</string>
    <string name="c_edit_success">Card edited successfully!</string>

    <string name="l_add">Add label</string>
    <string name="l_edit">Edit label</string>
    <string name="l_delete">Delete label</string>
    <string name="l_add_success">Label added successfully!</string>
    <string name="l_edit_success">Label edited successfully!</string>
    <string name="l_duplicate">Duplicate found! Please choose another title!</string>

    <string name="title">Title</string>
    <string name="stacks">Stack</string>
    <string name="description">Description</string>
    <string name="labels">Labels</string>
    <string name="cards">Cards</string>

    <string name="choose_session_constraints">Choose stacks and labels</string>

    <string name="learn">Learn</string>

    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="selection">Selection</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="start_import">Import</string>

    <string name="random_order">Random order</string>
    <string name="match_criteria">Matching criteria</string>

    <string name="error_empty_field">Field can not be empty!</string>
    <string name="error_enter_number">Please enter a number!</string>
    <string name="error_invalid_stacks">Invalid number of stacks!</string>

    <string name="statistics">Your Results</string>
    <string name="right_answers">Right answers:</string>
    <string name="wrong_answers">Wrong answers:</string>
    <string name="not_answered">Not answered:</string>
    <string name="close">Close</string>

    <string name="save_results_title">Save results</string>
    <string name="save_results">Do you want to save your results?</string>
    <string name="save_results_success">Successfully saved results!</string>
    <string name="answer_marked_right">Marked answer as right</string>
    <string name="answer_marked_wrong">Marked answer as wrong</string>

    <string name="uncategorized">No Label</string>

    <plurals name="really_delete_project">
        <item quantity="one">Really delete %d project?</item> ,
        <item quantity="other">Really delete %d projects?</item>
    </plurals>
    <plurals name="deleted_project">
        <item quantity="one">%d project deleted.</item> ,
        <item quantity="other">%d projects deleted.</item>
    </plurals>
    <plurals name="really_delete_label">
        <item quantity="one">Really delete %d label?</item> ,
        <item quantity="other">Really delete %d labels?</item>
    </plurals>
    <plurals name="deleted_label">
        <item quantity="one">%d label deleted.</item> ,
        <item quantity="other">%d labels deleted.</item>
    </plurals>
    <plurals name="really_delete_card">
        <item quantity="one">Really delete %d card?</item> ,
        <item quantity="other">Really delete %d cards?</item>
    </plurals>
    <plurals name="deleted_card">
        <item quantity="one">%d card deleted.</item> ,
        <item quantity="other">%d cards deleted.</item>
    </plurals>

    <plurals name="cards">
        <item quantity="one">%d card</item>
        <item quantity="other">%d cards</item>
    </plurals>

    <string name="cant_delete">can\'t be deleted!</string>

    <string name="download_zip">Download file &#8230;</string>
    <string name="enter_download_url">Enter Download link</string>
    <string name="start_download">Start download</string>

    <string name="importing">Import&#8230;</string>
    <string name="deleting">Delete&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>

    <string name="title_activity_display_labels">Labels</string>
    <string name="title_activity_display_cards">Cards</string>
    <string name="title_activity_learning">Learning</string>
    <string name="title_activity_xml_import">Download file</string>
    <string name="title_activity_learning_settings">Settings - Learning</string>

    <string name="success_download">Successfully downloaded files ;)</string>
    <string name="success_import">Successfully imported files ;)</string>
    <string name="no_import">No folder specified.</string>
    <string name="io_error">File error :( \n\nPlease make sure that you selected a ZIP file with flashcards!</string>
    <string name="connection_error">Connection error :( \n\nPlease make sure that you use a link providing a ZIP file with flashcards!</string>
    <string name="network_error">Network error :( \n\nYou seem to have no internet connection&#8230; please enable internet access or start your download later</string>
    <string name="xml_error">Error parsing xml :( \n\nPlease make sure the files you try to download are not corrupted!</string>

    <string name="not_yet_implemented">Not yet implemented but coming soon :)</string>
    <string name="download_link_missing">Download link missing :( \n\nPlease enter a download link!</string>

    <string name="pref_text_title">Text settings</string>
    <string name="pref_font_size_text">Font size</string>
    <string name="pref_font_size_text_default" translatable="false">16</string>
    <string-array name="pref_font_size_text_entries">
        <item>12</item>
        <item>14</item>
        <item>16 (small)</item>
        <item>18</item>
        <item>20</item>
        <item>24 (medium)</item>
        <item>28</item>
        <item>32 (large)</item>
    </string-array>
    <string-array name="pref_font_size_text_values">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>32</item>
    </string-array>
    <string name="stacks_plural">Stacks</string>
    <string name="title_activity_prepare_learning">Please choose&#8230;</string>
    <string name="title_activity_xml_download">Download from URL</string>

</resources>
