<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/c_add_questiontext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minLines="3"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:hint="@string/c_question_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:paddingBottom="10dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/c_add_answertext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minLines="3"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:hint="@string/c_answer_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:layout_weight="0.5" />

</LinearLayout>