<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="org.random_access.flashcardsmanager.PrepareLearningDialog">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/labels"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:padding="5dp"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:id="@+id/btn_show_labellist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_down_grey"
            android:background="@android:color/transparent"
            android:padding="5dp"/>

    </LinearLayout>


    <ListView
        android:id="@+id/list_label_selection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/stacks"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:padding="5dp"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:id="@+id/btn_show_stacklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_up_grey"
            android:background="@android:color/transparent"
            android:padding="5dp"/>

    </LinearLayout>


    <ListView
        android:id="@+id/list_stack_selection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/match_criteria"
            android:layout_gravity="center_vertical" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/choice_search_criteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/choice_or"
                android:text="@string/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/choice_and"
                android:text="@string/and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/choice_random"
            android:text="@string/random_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/number_of_matches"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="end" />

    </LinearLayout>


</LinearLayout>
