<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/abc_dialog_padding_material">

    <TextView
        android:text="@string/right_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:padding="10dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/txt_right_answers"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/green"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:textStyle="bold" />

    <TextView
        android:text="@string/wrong_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txt_wrong_answers"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:textStyle="bold" />

    <TextView
        android:text="@string/not_answered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txt_not_answered"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/dark_grey"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:textStyle="bold" />


</LinearLayout>